--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ services:
     command: '--default-authentication-plugin=mysql_native_password'
     networks:
       - app-network
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "5"
 
   wordpress:
     depends_on: 
@@ -27,19 +31,16 @@ services:
       WORDPRESS_DB_NAME: $WORDPRESS_DB_NAME
       WORDPRESS_DB_USER: $WORDPRESS_DB_USER
       WORDPRESS_DB_PASSWORD: $WORDPRESS_DB_PASSWORD
-      WP_HOME: $WP_HOME
-      WP_SITEURL: $WP_SITEURL
-      WORDPRESS_CONFIG_EXTRA: |
-        define('WP_HOME', getenv('WP_HOME'));
-        define('WP_SITEURL', getenv('WP_SITEURL'));
-        define('WP_DEBUG', true);
-        define('FORCE_SSL_ADMIN', false);
     volumes:
       - wp_data:/var/www/html
       - ./wordpress/wp-content/themes:/var/www/html/wp-content/themes
       - ./config/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
     networks:
       - app-network
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "5"
 
   nginx:
     depends_on:
@@ -55,26 +56,37 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/nginx/certs:/etc/nginx/certs
       - ./wordpress/wp-content/themes:/var/www/html/wp-content/themes
-      # - certbot-etc:/etc/letsencrypt
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
     environment:
       - NGINX_SERVER_NAME=$NGINX_SERVER_NAME
     networks:
       - app-network
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "5"
 
-
-  # certbot:
-  #   depends_on:
-  #     - nginx
-  #   image: certbot/certbot
-  #   container_name: certbot
-  #   volumes:
-  #     - certbot-etc:/etc/letsencrypt
-  #     - wordpress:/var/www/html
-  #   command: certonly --webroot --webroot-path=/var/www/html --email mike@blueleopard.digital --agree-tos --no-eff-email --staging -d $HOST
+  certbot:
+    depends_on:
+      - nginx
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - wp_data:/var/www/html
+    command: certonly --webroot --webroot-path=/var/www/html --email $EMAIL --agree-tos --no-eff-email --staging -d $HOST
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "5"
 
 volumes:
   wp_data:
   db_data:
+  certbot-etc:
+  certbot-var:
 
 networks:
   app-network:
